--- a/.classpath
+++ b/.classpath
@@ -2,7 +2,8 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="E:/Studia/RzeczyDoJavy/xstream-1.4.10/lib/xstream-1.4.10.jar"/>
-	<classpathentry kind="lib" path="E:/Studia/RzeczyDoJavy/jcalendar-1.4.jar"/>
+	<classpathentry kind="lib" path="D:/Programowanie/Kompo/calendar/libs/jcalendar-1.4.jar"/>
+	<classpathentry kind="lib" path="D:/Programowanie/Kompo/calendar/libs/mssql-jdbc-6.4.0.jre8.jar"/>
+	<classpathentry kind="lib" path="D:/Programowanie/Kompo/calendar/libs/xstream-1.4.10.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
