--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,10 @@
 *.war
 *.ear
 
+autosave.xml
+autosave.bin
+export.odt
+
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 /bin/
